--- a/src/DiscordBotDebugger.Web/DiscordBotDebugger.Web.csproj
+++ b/src/DiscordBotDebugger.Web/DiscordBotDebugger.Web.csproj
@@ -2,12 +2,16 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <UserSecretsId>7209af5e-d8e9-41e9-89c1-30b043a80806</UserSecretsId>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <DockerfileContext>..\..</DockerfileContext>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="AntDesign" Version="0.5.0-nightly-2012221700" />
         <PackageReference Include="DSharpPlus" Version="4.0.0-rc1" />
         <PackageReference Include="Humanizer" Version="2.8.26" />
+        <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     </ItemGroup>
 
     <ItemGroup>
